[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,16 @@
 <html>
 
-/html>
+<head>
+    <title>
+        article-one 
+    </title>
+</head>
+
+<body>
+    <div>
+        <a href= "/">HOME</a>
+    </div>
+    <br/>
+    </body>
+
+</html>
